--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.22",
     "ai": "^4.3.16",
     "applesauce-relay": "^2.0.0",
     "debug": "^4.4.1",
     "idb": "^8.0.3",
     "mime": "^4.0.7",
+    "ollama-ai-provider": "^1.2.0",
     "rollup-preset-solid": "^3.0.0",
     "rxjs": "^7.8.2",
     "solid-js": "^1.9.5",
