--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
+    "@isomorphic-git/lightning-fs": "^4.6.2",
     "ai": "^4.3.16",
     "applesauce-relay": "^2.0.0",
     "debug": "^4.4.1",
@@ -22,7 +23,8 @@
     "rollup-preset-solid": "^3.0.0",
     "rxjs": "^7.8.2",
     "solid-js": "^1.9.5",
-    "tailwindcss": "^4.1.10"
+    "tailwindcss": "^4.1.10",
+    "zod": "^3.25.64"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.3",
