--- a/.github/workflows/nsite.yml
+++ b/.github/workflows/nsite.yml
@@ -39,6 +39,11 @@ jobs:
       - name: Build
         run: pnpm build
 
+      - name: Install Deno
+        uses: denoland/setup-deno@v2
+        with:
+          deno-version: "v2.x"
+
       - name: Install nsyte CLI
         run: deno install -A -f -g -n nsyte jsr:@nsyte/cli
 
